--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,21 +11,21 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: writing in a file
-          run: echo "Hello Word" > $FILENAME
+          run: echo $FILENAME
 
-        - uses: actions/upload-artifact@v4
-          with:
-            name: ${{ env.ARTIFACT_NAME }}
-            path: $FILENAME  
+        #- uses: actions/upload-artifact@v4
+        #  with:
+        #    name: ${{ env.ARTIFACT_NAME }}
+        #    path: $FILENAME  
 
     my-job3:
         needs: my-job2
         runs-on: ubuntu-latest
         steps:
 
-        - uses: actions/download-artifact@v4
-          with:
-            name: ${{ env.ARTIFACT_NAME }}
+        #- uses: actions/download-artifact@v4
+        #  with:
+        #    name: ${{ env.ARTIFACT_NAME }}
 
         - name: Display the content 
-          run: cat $FILENAME      
+          run: echo ${{ env.ARTIFACT_NAME }}     
